--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="overlay" class="fixed inset-0 z-50 bg-black flex flex-col items-center justify-center transition-opacity duration-700">
         <div class="text-center animate-pulse">
             <i class="fas fa-heart text-red-500 text-4xl mb-4"></i>
-            <h1 class="text-2xl font-bold mb-2">Para meu nenem❤️</h1>
+            <h1 class="text-2xl font-bold mb-2">Para Nós</h1>
             <p class="text-gray-400 mb-6 text-sm">Toque para entrar</p>
             
             <button id="startSiteBtn" class="bg-white/10 border border-white/20 text-white px-8 py-3 rounded-full font-semibold hover:bg-white/20 transition-all cursor-pointer">
@@ -55,7 +55,7 @@
                 <i class="fas fa-random text-gray-300 text-lg hover:text-white transition"></i>
                 <i class="fas fa-step-backward text-white text-2xl cursor-pointer hover:scale-110 transition"></i>
                 
-                <button onclick="togglePlay()" aria-label="Reproduzir ou Pausar Música" class="w-16 h-16 bg-white rounded-full flex items-center justify-center cursor-pointer hover:scale-105 transition-transform border-none shadow-xl hover:shadow-2xl hover:shadow-white/20">
+                <button onclick="togglePlay()" aria-label="Reproduzir" class="w-16 h-16 bg-white rounded-full flex items-center justify-center cursor-pointer hover:scale-105 transition-transform border-none shadow-xl hover:shadow-2xl hover:shadow-white/20">
                     <i id="playIcon" class="fas fa-play text-black text-2xl ml-1"></i>
                 </button>
 
@@ -85,13 +85,26 @@
             </div>
         </div>
 
+        <div class="rounded-xl p-5 text-black relative overflow-hidden shadow-lg" style="background: linear-gradient(135deg, #67dceb 0%, #4facfe 100%);">
+            <h3 class="font-bold text-lg mb-3 opacity-90 text-white drop-shadow-md">Mensagem especial</h3>
+            <div id="messageContainer" class="h-40 overflow-y-auto custom-scroll pr-2">
+                <p class="text-xl font-bold leading-relaxed text-white drop-shadow-sm">
+                    Você é o amor da minha vida e a pessoa que me faz querer ser melhor a cada novo dia 😋💖.<br><br>
+                    Mais do que uma namorada maravilhosa, você é o motivo maior de eu ser feliz e querer viver 🫶🥺.<br><br>
+                    Seu sorriso ilumina meus dias e seu carinho aquece meu coração 💖❤️‍🔥.<br><br>
+                    Meu bem, eu amo você mais do que qualquer palavra pode expressar!🌍
+                </p>
+            </div>
+            <button onclick="toggleMessage()" class="mt-4 bg-white/20 hover:bg-white/30 text-white border border-white/40 px-4 py-2 rounded-full text-sm font-semibold transition-colors backdrop-blur-md shadow-sm">Ler tudo</button>
+        </div>
+
         <div class="relative rounded-xl overflow-hidden h-48 flex flex-col justify-end p-4 shadow-2xl border border-white/10 glass-card">
             <div class="absolute inset-0 bg-black z-0">
                 <div class="absolute top-0 right-0 w-64 h-64 bg-pink-600 rounded-full blur-3xl opacity-60 -translate-y-1/2 translate-x-1/4 animate-pulse"></div>
                 <div class="absolute bottom-0 left-0 w-64 h-64 bg-red-600 rounded-full blur-3xl opacity-60 translate-y-1/4 -translate-x-1/4 animate-pulse delay-1s"></div>
             </div>
             <div class="relative z-10">
-                <h2 class="text-3xl font-bold leading-tight mb-2 drop-shadow-lg">Seu<br>Relacionamento<br>Wrapped</h2>
+                <h2 class="text-3xl font-bold leading-tight mb-2 drop-shadow-lg"><br>Wrapped</h2>
                 <button onclick="startWrapped()" class="bg-white text-black px-6 py-2 rounded-full font-bold text-sm hover:scale-105 transition-transform shadow-lg cursor-pointer">Vamos lá</button>
             </div>
         </div>
@@ -104,14 +117,14 @@
 
             <div class="absolute top-6 left-0 w-full px-4 flex justify-between items-center z-20 text-white drop-shadow-md">
                 <div class="flex items-center gap-2">
-                    <img src="tela-inicial/1.jpg" alt="Avatar do Casal" class="w-8 h-8 rounded-full border border-white">
+                    <img src="tela-inicial/1.jpg" alt="Avatar" class="w-8 h-8 rounded-full border border-white">
                     <span class="font-bold text-sm">Nossa Retrospectiva</span>
                 </div>
-                <button onclick="closeWrapped()" aria-label="Fechar Wrapped" class="text-xl px-2"><i class="fas fa-times"></i></button>
+                <button onclick="closeWrapped()" aria-label="Fechar" class="text-xl px-2"><i class="fas fa-times"></i></button>
             </div>
 
             <div class="w-full h-full flex items-center justify-center bg-gray-900">
-                <img id="storyImage" src="" alt="Story Atual" class="w-full h-full object-cover hidden">
+                <img id="storyImage" src="" alt="Story" class="w-full h-full object-cover hidden">
                 <video id="storyVideo" playsinline class="w-full h-full object-cover hidden"></video>
             </div>
 
