Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <h3 class="font-bold text-lg mb-3 opacity-90 text-white drop-shadow-md">Mensagem especial</h3>
             <div id="messageContainer" class="h-40 overflow-y-auto custom-scroll pr-2">
                 <p class="text-xl font-bold leading-relaxed text-white drop-shadow-sm">
-                    Você é o amor da minha vida e a pessoa que me faz querer ser melhor a cada novo dia 😋💖.<br><br>
+                    Você é o amor da minha vida e a pessoa que me faz querer ser melhor a cada novo dia 🥹💖.<br><br>
                     Mais do que uma namorada maravilhosa, você é o motivo maior de eu ser feliz e querer viver 🫶🥺.<br><br>
                     Seu sorriso ilumina meus dias e seu carinho aquece meu coração 💖❤️‍🔥.<br><br>
                     Meu bem, eu amo você mais do que qualquer palavra pode expressar!🌍
@@ -139,4 +139,5 @@
     
     <script src="script.js"></script>
 </body>
+
 </html>
