--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="overlay" class="fixed inset-0 z-50 bg-black flex flex-col items-center justify-center transition-opacity duration-700">
         <div class="text-center animate-pulse">
             <i class="fas fa-heart text-red-500 text-4xl mb-4"></i>
-            <h1 class="text-2xl font-bold mb-2">Para Nós</h1>
+            <h1 class="text-2xl font-bold mb-2">Para meu nenem</h1>
             <p class="text-gray-400 mb-6 text-sm">Toque para entrar</p>
             
             <button id="startSiteBtn" class="bg-white/10 border border-white/20 text-white px-8 py-3 rounded-full font-semibold hover:bg-white/20 transition-all cursor-pointer">
@@ -141,3 +141,4 @@
 </body>
 
 </html>
+
