--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             </div>
             
             <div class="w-full group">
-                <div class="w-full bg-gray-600/50 h-1 rounded-full overflow-hidden mt-2 group-hover:h-1.5 transition-all">
-                    <div class="bg-white h-full w-1/3 rounded-full relative animate-progress shadow-[0_0_10px_rgba(255,255,255,0.8)]"></div>
+                <div id="progressBarContainer" class="w-full bg-gray-600/50 h-1 rounded-full overflow-hidden mt-2 group-hover:h-1.5 transition-all cursor-pointer" onclick="seek(event)">
+                    <div id="progressBar" class="bg-white h-full w-0 rounded-full relative shadow-[0_0_10px_rgba(255,255,255,0.8)]"></div>
                 </div>
                 <div class="flex justify-between text-xs text-gray-200 mt-1 font-mono">
-                    <span>Play</span><span>∞</span>
+                    <span id="currentTime">0:00</span><span id="totalDuration">0:00</span>
                 </div>
             </div>
 
